--- a/notebooks/03_best_model_training.ipynb
+++ b/notebooks/03_best_model_training.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color: #60B5FC; font-weight: bold; font-size: 24px;\">02 Model Training</span>"
+    "<span style=\"color: #60B5FC; font-weight: bold; font-size: 24px;\">03 Best Model Training</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #AC1555; font-weight: bold; font-size: 18px;\">Libraries</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +36,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #AC1555; font-weight: bold; font-size: 18px;\">Dataframe</span>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +53,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #AC1555; font-weight: bold; font-size: 18px;\">Format review</span>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +69,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #AC1555; font-weight: bold; font-size: 18px;\">Target column</span>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +85,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #AC1555; font-weight: bold; font-size: 18px;\">Split train and test</span>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +117,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: #AC1555; font-weight: bold; font-size: 18px;\">Train XGB Regressor Model</span>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +137,6 @@
     }
    ],
    "source": [
-    "target_column = 'mathscore'\n",
-    "\n",
     "# Automatically identify categorical and numerical columns\n",
     "categorical_columns = df.select_dtypes(include=['object']).columns\n",
     "numerical_columns = df.select_dtypes(exclude=['object']).columns.tolist()\n",
@@ -180,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -332,28 +372,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Save Model**"
+    "<span style=\"color: #AC1555; font-weight: bold; font-size: 18px;\">Save Model</span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['best_model.pkl']"
+       "['../src/ml_models/best_model.pkl']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Guarda el mejor modelo en un archivo\n",
-    "joblib.dump(best_model, 'best_model.pkl',protocol=3)"
+    "joblib.dump(best_model, '../src/ml_models/best_model.pkl')"
    ]
   },
   {
