--- a/notebooks/03_best_model_training.ipynb
+++ b/notebooks/03_best_model_training.ipynb
@@ -401,6 +401,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'gender': {932: 'female'},\n",
+       " 'ethnicgroup': {932: 'group A'},\n",
+       " 'parenteduc': {932: 'some college'},\n",
+       " 'lunchtype': {932: 'free/reduced'},\n",
+       " 'testprep': {932: 'none'},\n",
+       " 'parentmaritalstatus': {932: 'single'},\n",
+       " 'practicesport': {932: 'never'},\n",
+       " 'isfirstchild': {932: 'no'},\n",
+       " 'nrsiblings': {932: 1.0},\n",
+       " 'transportmeans': {932: 'school_bus'},\n",
+       " 'wklystudyhours': {932: '> 10'}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.head(1).to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
